# cg-glite

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO-LATER.md
src/: main.rs
src/agent/: memory.rs  mod.rs  retrieval.rs
src/graph/: mod.rs  operations.rs  schema.rs
src/llm/: client.rs  extraction.rs  mod.rs
